--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,11 @@ repositories {
 }
 
 dependencies {
-	compile 'org.hibernate:hibernate-core:4.3.5.Final'
+	compile 'org.hibernate:hibernate-entitymanager:4.3.5.Final'
 	testCompile 'junit:junit:4.11',
-			'com.kpelykh:docker-java:0.8.1'
+			//'com.kpelykh:docker-java:0.8.1',
+			'org.glassfish.jersey.core:jersey-client:2.7',
+			'org.glassfish.jersey.media:jersey-media-json-jackson:2.7',
+			'postgresql:postgresql:9.1-901.jdbc4'
+
 }
